# GuitarTrainer

./: main.py  pyproject.toml  test.py
engine/: __init__.py  clef.py  exercise.py  instrument.py  lesson.py  note.py  progress.py  scale.py  sound_manager.py  storage_manager.py
framework/: __init__.py  aabb.py  frame.py  mat2.py  node.py  pin.py  position.py  size.py  update_hook.py
framework/components/: __init__.py  button.py  container.py  image.py  label.py  rect.py  scroll_container.py  text.py
interface/: __init__.py  bordered_rect.py  dropdown.py  fretboard.py  fretboard_explorer.py  image_button.py  lesson_interface.py  lessons.py  menu_bar.py  scroll_container.py  settings_page.py  stave.py  style.py  tuner.py
interface/lesson/: __init__.py  lesson_button.py  lesson_interface.py  lesson_selection.py  lessons.py
test/: frets.json  practice.json  progress.json  scales.json  stave.json
