[tool.poetry]
name = "guitar-trainer"
version = "0.1.0"
description = ""
authors = ["Lenny Critchley <LennyPhoenixC@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
pyaudio = "^0.2.13"
pyglet = "^2.0.10"
numpy = "^1.26.2"
scipy = "^1.11.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
